Add notes for ontology-based PFP part

--- a/_posts/2022-10-24-note1.md
+++ b/_posts/2022-10-24-note1.md
@@ -10,7 +10,7 @@ tags:
 蛋白质数据的表征，是解决当前生物医学问题的一大关键，比较好的方法是从优秀的语言模型汲取灵感，以构建类似的生信模型，这些模型最近已经在`序列-结构-功能`关系提取上获得了很大的成功。这篇论文对蛋白质表征学习做了深入的调研，分类并解释每一种方法，依次在如下预测目标中对他们进行评估：
 
 1. 蛋白质间的语义相似性
-1. ontology-based protein function
+1. ontology-based蛋白质功能
 1. 药物靶蛋白族
 1. 突变对蛋白质-蛋白质亲和性的改变
 
@@ -111,9 +111,9 @@ PFP任务中最具综合性的benchmark是Critical Assessment of Functional Anno
 
 a,b,c代表不同的GO categories:
 
-+ a: molecular function
-+ b: biological process
-+ c: cellular component
++ a: molecular function, MF
++ b: biological process, BP
++ c: cellular component, CC
 
 每张图的一个点代表一个模型的表现，横坐标值表示在`Sparse Uniform`数据集上的correlation,纵坐标值表示在`Well Annotated 500`数据集上的correlation，点的位置越靠右上越好。
 
@@ -133,3 +133,40 @@ a,b,c代表不同的GO categories:
 
 1. 数据（人类蛋白质组）非常庞大而稀疏，不同的methods表现起来差别不大。
 2. distance metric对结果影响很大。
+
+
+## Ontology-based蛋白质功能预测
+
+这一个task做的事情就是预测GO term annotation，本质上是一个分类任务。在representation后加一个linear分类器即可。
+
+如果用更加复杂的分类器，那么就无法判断结果是因为representation足够好还是分类器足够好了。用简单的线性分类器则可以证明representation达到了线性可分的状态，是足够好的。
+
+这篇论文中，作者关注了GO term之间的关系和每个term的信息量。比如，GO term “negative regulation of molecular function”这个annotation太general了，在GO graph中往往接近graph的root，并且含有较少的信息量，作者称这类term为shallow terms。如果是GO term "negative regulation of double-stranded telomeric DNA binding"这个annotation则会更具信息量。因此，作者把所有的GO term根据他们在GO graph中的深度分为shallow, normal和specific这三类。
+
+此外，作者还根据带有这个annotation的protein的数量将annotation分类（low, middle, high）。这十分有意义：
+1. 揭示训练数据很少的时候结果如何。很多情况下，非常具体的annotation所对应的蛋白质会很少。
+2. 有的function被研究的很透彻，annotation很多，有的function还待研究(under-studied)，作者expect语言模型对于under-studied的function能有很好的表征能力（若真如此，语言模型会对研究这些新功能非常有意义）
+
+
+GO group一共有9类（$[low, middle, high]\times[shallow, normal, specific]$），结果用F1-score-based热力图展示。
+
+![](https://bnswt.github.io/files/2022-11-07-22-24-05.png)
+
+整体的结果（包括recall,precision,F1-score,accuracy, Hamming distance）如下表。由于建模方式特殊，这篇文章的结果比CAFA challenges中报告的结果要好。不过，作者主要的意图是从不同角度比较各个语言模型的表现，而不是选出最佳的一个来做PFP（后者是CAFA challenge的目标）。
+
+MF
+![](https://bnswt.github.io/files/2022-11-07-22-26-16.png)
+
+BP
+![](https://bnswt.github.io/files/2022-11-07-22-26-37.png)
+
+CC
+![](https://bnswt.github.io/files/2022-11-07-22-26-48.png)
+
+
+CC和BO两类annotation的预测结果比MF稍差，这可能是因为输入只有序列数据，而序列和localization（某个cleaved signal peptides可能在结构中不存在）并没有直接的联系，从而也和蛋白质在一个很大规模的生化过程中起到的生物逻辑学作用没有直接关系。
+
+对于数据量和结果好坏的关系，CC term的结果随着数据量减小变差的比较明显，MF和BP则只有略微的变差。
+
+对于term specificities(shallow/generic terms v.s. specific/informative term)，并没有观察到显著的差异。然而，仍然可以认为specific/informative的GO term是有一定区别的，毕竟它们对应的数据量有显著差异。
+
