Update content page

--- a/_posts/2022-10-24-note1.md
+++ b/_posts/2022-10-24-note1.md
@@ -9,10 +9,16 @@ tags:
 
 蛋白质数据的表征，是解决当前生物医学问题的一大关键，比较好的方法是从优秀的语言模型汲取灵感，以构建类似的生信模型，这些模型最近已经在`序列-结构-功能`关系提取上获得了很大的成功。这篇论文对蛋白质表征学习做了深入的调研，分类并解释每一种方法，依次在如下预测目标中对他们进行评估：
 
-1. 蛋白质间的语义相似性
-1. ontology-based蛋白质功能
-1. 基于药物的蛋白分类
-1. 突变对蛋白质-蛋白质亲和性的改变
+1. 1. 背景知识
+2. 2. Overview
+3. 3. 语义相似性推理
+	1. 3.1. 概述
+	2. 3.2. 过程
+	3. 3.3. 结果
+	4. 3.4. 关键点：
+4. Ontology-based蛋白质功能预测
+5. 基于药物的蛋白分类
+6. 蛋白质-蛋白质亲和性估计
 
 > Ontology(https://en.wikipedia.org/wiki/Ontology_(information_science))
 > 在计算机科学和信息科学中，本体是指对概念、数据和实体之间的类别、属性和关系的表示、命名和定义，这些概念、数据和实体构成了一个、大量或所有的论域[1]。本体提供的是特定领域之中那些存在着的对象类型或概念及其属性和相互关系[2]；或者说，本体就是一种特殊类型的术语集，具有结构化的特点，且更加适合于在计算机系统之中使用；或者说，本体实际上就是“对特定领域之中某套概念及其相互之间关系的形式化表达（formal representation）”
@@ -52,10 +58,16 @@ PFP任务中最具综合性的benchmark是Critical Assessment of Functional Anno
 
 对不同方法根据技术特征和其application分类，然后进行评估。具体评估任务涵盖了：
 
-1. 语义相似性推理
-2. ontology-based蛋白质功能预测
-3. 基于药物的蛋白分类
-4. 蛋白质-蛋白质亲和性估计
+1. 1. 背景知识
+2. 2. Overview
+3. 3. 语义相似性推理
+	1. 3.1. 概述
+	2. 3.2. 过程
+	3. 3.3. 结果
+	4. 3.4. 关键点：
+4. Ontology-based蛋白质功能预测
+5. 基于药物的蛋白分类
+6. 蛋白质-蛋白质亲和性估计
 
 这篇论文选取了23种方法作为benchmarking task，后面的介绍将包括每种方法protein representation的构建和应用，以及对应的下游任务和评估。本文一共比较了39种方法（包括前面的benchmark），这些方法的平均表现总结如下表：
 
